--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "elementary-electron": "^1.3.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coffee-script": "^1.11.1",
+    "electron-prebuilt": "^1.4.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
