Add solution for 03 cat annotation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "NodeSchool Solutions by Jaz for Elementary Electron workshopper",
   "main": "index.js",
   "dependencies": {
-    "elementary-electron": "^1.3.6"
+    "cat-picture": "^5.1.2",
+    "elementary-electron": "^1.3.6",
+    "lightning-image-poly": "0.0.10"
   },
   "devDependencies": {
     "coffee-script": "^1.11.1",
